Fixed overlapping on edges between march-april and september-october

--- a/style.css
+++ b/style.css
@@ -15,11 +15,17 @@ svg {display: block; position: absolute;}
 .eventName {
 	font-family: 'Open Sans',sans-serif;
 	font-weight: 400;
+	position: relative;
+	z-index: 1;
 }
 .eventPopup {
 	width: 180px;
 	height: 22px;
 	background-color: red;
+	position: absolute;
+	z-index: 900;
+	color: blue;
+	text-align: left;
 }
 
 /* 'add event' form */
